--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wedding Client Portal</title>
-  <link rel="stylesheet" href="../src/styles/main.css">
+  <link rel="stylesheet" href="src/styles/main.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
         Your wedding details in one simple place
       </p>
 
-      <a href="../src/pages/overview.html" class="primary-button">
+      <a href="src/pages/overview.html" class="primary-button">
         Open Wedding Portal
       </a>
 
