--- a/src/pages/overview.html
+++ b/src/pages/overview.html
@@ -29,10 +29,14 @@
         <h3>Checklist</h3>
         <p>Things to prepare</p>
       </a>
-
       <a href="files.html" class="card">
         <h3>Files & Photos</h3>
         <p>Contracts & gallery</p>
+      </a>
+
+      <a href="guest-list.html" class="card">
+        <h3>Guest List</h3>
+        <p>Guest details</p>
       </a>
 
       <a href="chat.html" class="card">
