Add images to chat.html

--- a/src/pages/chat.html
+++ b/src/pages/chat.html
@@ -19,7 +19,7 @@
     <!-- Planner Card -->
     <section class="planner-card">
 
-      <img src="../assets/images/planner.jpg" alt="Planner" class="avatar">
+      <img src="../assets/images/planner.webp" alt="Planner" class="avatar">
 
       <h2>Anna Li</h2>
       <p class="role">Wedding Planner · Phuket</p>
