--- a/src/pages/timeline.html
+++ b/src/pages/timeline.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wedding Timeline</title>
   <link rel="stylesheet" href="../styles/main.css">
+    <link rel="manifest" href="../manifest.json">
+
+<meta name="theme-color" content="#111111">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Wedding">
+
+<link rel="apple-touch-icon" href="../assets/images/icon-192.png">
 </head>
 <body>
 
